# file-search-mcp

./: Cargo.toml  README.md
src/: main.rs
src/tools/: search_tool.rs
