[package]
name = "file-search-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.1", features = ["server", "transport-io"] }
tantivy = "0.22.0"
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "io-std",
  "signal",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "std",
  "fmt",
] }
serde = "1.0.219"
